Changelog for Collections.

- Fixed displaying selection grid with TVs
- Pass whole row to snippet renderer
- Fixed sorting by TV with dash in name

Collections 3.0.2
===================
- Fixed saving Collections view from Resource's settings tab
- Link Resource to Selection can be done by searching ID
- Fixed passing sort dir int uppercase format to getSelections
- Removed parents option from getSelections call

Collections 3.0.1
===================
- Fixed update from grid

Collections 3.0.0
===================
- Added validation for column name if contains a dot
- Added PHP renderer (snippet) that will be used for a column
- Added view option to define Resource Classes that will be available in resource type select
- Added view option to define context menu items
- Added view option to define buttons and their style
- Fixed saving view options from not-activated tab
- Changed default tree icon for Collections in Revo 2.3
- Added getSelections snippet (works with getPage, getCache, etc.)
- Updated view of Collection's settings tab
- Updated Collections view
- Added CRC for Selections
- Added back button to Collection's children and revert close button to original functionality
- Fire OnBeforeEmptyTrash and OnEmptyTrash when removing Resource via Collections

Collections 2.2.2
===================
- Fixed rendering TV and Tagger columns with dash in name/alias

Collections 2.2.1
===================
- Fixed PHP 5.2 compatibility

Collections 2.2.0
===================
- Added an option to set position of Content field
- Added an options to set Tab's and New child's button label
- Added Collections.renderer.image for rendering images
- Added tabs to Collection views to split its settings
- Splitted Setting tab to vtabs for Resource settings and Collections settings
- Improved close button in collection's childs
- Fixed showing data in TV columns
- Added an option to permanently remove deleted resource
- Fixed duplicate action from context menu