@@ -28,6 +28,23 @@ class CollectionsOnDocFormPrerender extends CollectionsPlugin {
         }
 
         if ($inject) {
+            $this->modx->controller->addLexiconTopic('collections:default');
+            $this->modx->controller->addLexiconTopic('collections:selections');
+            $this->modx->controller->addLexiconTopic('collections:custom');
+
+            /** @var CollectionTemplate $template */
+            $template = $this->modx->collections->getCollectionsView($parent);
+
+            $templateOptions = array(
+                'back_to_collection' => $template->back_to_collection_label,
+                'back_to_selection' => $template->back_to_selection_label,
+            );
+
+            $this->modx->regClientStartupHTMLBlock('
+            <script type="text/javascript">
+            Collections_labels = ' . $this->modx->toJSON($templateOptions) . ';
+            </script>');
+
             $jsUrl = $this->collections->getOption('jsUrl') . 'mgr/';
             $this->modx->regClientStartupScript($jsUrl . 'extra/hijackclose.js');
         }
