@@ -1,5 +1,6 @@
 Changelog for Collections.
 
+- Added option to set label for Back to Collection/Selection button
 - Fixed displaying selection grid with TVs
 - Pass whole row to snippet renderer
 - Fixed sorting by TV with dash in name
